# Dotwell

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  installer.rs  main.rs  scanner.rs  ui.rs
